syntax = "proto3";

package user;

import "google/protobuf/timestamp.proto";
import "google/api/annotations.proto";


option go_package = "./;user";
/// option go_package = "user-service/user";

service UserService {
  rpc UpdateUser(UpdateUserRequest) returns (UpdateUserResponse) {
    option (google.api.http) = {
      post : "/v1/users/update"
      body : "*"
    };
  };

  rpc GetUser(GetUserRequest) returns (GetUserResponse) {
    option (google.api.http) = {
      get : "/v1/users/getuser/{user_id}"
    };
  };

  rpc GetUserByEmail(GetUserByEmailRequest) returns (GetUserByEmailResponse){
    option (google.api.http) = {
      get : "/v1/users/getuserbyemail/{email}"
    };
  };

  rpc CreateUser(RegisterRequest) returns (RegisterResponse) {
    option (google.api.http) = {
      post : "/v1/users/register"
      body : "*"
    };
  }
}

message GetUserRequest { 
  string user_id = 1; 
}

message GetUserResponse {
  string user_id = 1;
  string name = 2;
  string email = 3;
  google.protobuf.Timestamp created_at = 4;
}


message GetUserByEmailRequest {
  string email = 1;
}

message GetUserByEmailResponse {
  string user_id = 1;
  string name = 2;
  string email = 3;
  string password = 4;
}

message UpdateUserRequest {
  string user_id = 1;
  string name = 2;
  string email = 3;
}

message UpdateUserResponse { 
  bool success = 1; 
}

message RegisterRequest {
  string username = 1;
  string email = 2;
  string password = 3;
}

message RegisterResponse { 
  string message = 1; 
}
